vf_yadif: accept input with several frames available.

Fixes ticket #1040.